--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -56,7 +56,6 @@
 	background-repeat: no-repeat;
 	height: 72px;
 	width: 418px;
-	margin-top: 8px;
 }
 
 .navbar-nav > li > a {
@@ -90,4 +89,8 @@ h2 {
 
 .body-copy li {
 	list-style-type: circle;
+}
+
+.navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand {
+	margin-left: 0 !important;
 }
