Logo fix attempt 3

--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -9,10 +9,10 @@
 		<!-- <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
 			<a href="/#!/" class="navbar-brand img-responsive text-center"></a>
 		</div> -->
-		<!-- <a href="/#!/">
-			<img alt="Avanti cycling" class="img-responsive text-center" src="/modules/core/img/logo.svg" />
-		</a> -->
-		<a href="/" class="navbar-brand img-responsive text-center"></a>
+		<a href="/#!/">
+			<img alt="Avanti cycling" class="img-responsive text-center" src="/modules/core/img/logo.svg" onerror="this.onerror=null; this.src='/modules/core/img/logo.png'" />
+		</a>
+		<!-- <a href="/" class="navbar-brand img-responsive text-center"></a> -->
 	</div>
 	<nav class="collapse navbar-collapse" collapse="!isCollapsed" role="navigation">
 		<ul class="nav navbar-nav navbar-left">
