Forcing inclusion of application.min

--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -35,6 +35,9 @@
 	{% for jsFile in jsFiles %}<script type="text/javascript" src="{{jsFile}}"></script>
 	{% endfor %} 
 
+	{% if process.env.NODE_ENV === 'production' %}
+	<script type="text/javascript" src="dist/application.min.js"></script>
+	{% endif %}
 	{% if process.env.NODE_ENV === 'development' %}
 	<!--Livereload script rendered -->
 	<script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
