--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -94,3 +94,5 @@ h2 {
 .navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand {
 	margin-left: 0 !important;
 }
+
+.navbar-inverse .navbar-nav>li>a{color:white !important;}
