--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -8,7 +8,7 @@
 
 .navbar-inverse {
 	background-color:rgb(34,34,34);
-	background-color:rgba(34,34,34, 0.9);
+	background-color:rgba(34,34,34, 0.8);
 	background-image: -webkit-linear-gradient(top, #3c3c3c 0%, #222 50%);
   	background-image:      -o-linear-gradient(top, #3c3c3c 0%, #222 50%);
   	background-image: -webkit-gradient(linear, left top, left bottom, from(#3c3c3c), to(#222));
@@ -95,4 +95,4 @@ h2 {
 	margin-left: 0 !important;
 }
 
-.navbar-inverse .navbar-nav>li>a{color:white !important;}
+/*.navbar-inverse .navbar-nav>li>a{color:white !important;}*/
