--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -47,7 +47,7 @@
 	background-color: rgb(10, 155, 181);
 	background-color: rgba(10, 155, 181, 0.8);
 	margin-top: 30px;
-	padding: 0 20px;
+	padding: 10px 20px;
 }
 
 .navbar-brand {
@@ -61,7 +61,7 @@
 .navbar-nav > li > a {
 	margin-left: 20px;
 	padding-top:  26px;
-	font-size: 20px;
+	font-size: 24px;
 	color: white;
 }
 
@@ -95,4 +95,4 @@ h2 {
 	margin-left: 0 !important;
 }
 
-/*.navbar-inverse .navbar-nav>li>a{color:white !important;}*/
+.navbar-inverse .navbar-nav>li>a{color:white !important;}
