Calendar added; bikeability added.

--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -22,6 +22,12 @@
 			<li ui-route="#who-we-are">
 				<a anchor-smooth-scroll="who-are-we" href="/#!/#who-we-are">Who we are</a>
 			</li>
+			<li ui-route="#bikeability">
+				<a anchor-smooth-scroll="bikeability" href="/#!/#bikeability">Bikeability</a>
+			</li>
+			<!-- <li>
+				<a href="/#!/bikeability">Bikeability</a>
+			</li> -->
 			<li ui-route="#contact">
 				<a anchor-smooth-scroll="contact" href="/#!/#contact">Contact</a>
 			</li>
