--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -24,16 +24,16 @@
 		<h2 id="what-we-do">What we do</h2>
 		<ul>
 			<li>Deliver Bikeability;</li>
-			<li>Consultancy to Bikeability schemes;</li>
+			<li>Provide consultancy to Bikeability schemes;</li>
+			<li>Provide consultancy to companies who wish to improve their green credentials;</li>
 			<li>Train instructors and leaders;</li>
-			<li>Consultant to companies who wish to improve their green credentials;</li>
 			<li>Lead cycle tours;</li>
 			<li>Coach new riders.</li>
 		</ul>
 		<p>We are a forward thinking company; we believe that cycling is hugely beneficial to all. It benefits people’s health and the environment. We at Avanti Cycling are about helping people and organisations.</p>
-		<h3>Helping people</h3> 
+		<h3>We help people</h3> 
 		<p>We can help to get people on their bikes or simply understand what they can or cannot do whilst cycling. </p> 
-		<h3>Helping organisations</h3> 
+		<h3>We help organisations</h3> 
 		<p>We can assist organisations in encouraging their employees to cycle to work. We can train those people to ride in traffic and enjoy their commute, or simply to maintain their own bikes.</p>
 
 		<h2 id="who-are-we">Who are we?</h2>
@@ -48,8 +48,46 @@
 			<li>Developed CTC into an Instructor training Organisation writing their courses and training their Instructor Trainers.</li>
 		</ul>
 
-		<h3>About Greg Woodford</h3> 
-		<p>Director and founder, Greg Woodford, is a passionate cyclist, loving all types of riding, be it commuting through London, touring or competing. He is an accomplished time trialist regularly winning national championships. He is probably the most experienced and knowledgeable person in the UK in cycle-training, having been involved in the National Standards/Bikeability since its inception.</p>
+		<!-- <h3>About Greg Woodford</h3> 
+		<p>Director and founder, Greg Woodford, is a passionate cyclist, loving all types of riding, be it commuting through London, touring or competing. He is an accomplished time trialist regularly winning national championships. He is probably the most experienced and knowledgeable person in the UK in cycle-training, having been involved in the National Standards/Bikeability since its inception.</p> -->
+
+		<h2 id="bikeability">Bikeability</h2>
+		<p>Bikeability is the modern way of teaching your children to ride in traffic. We use modern interactive and realistic teaching methods with highly trained instructors.</p>
+
+		<p>If your children are to use their bikes safely to go to their friends or ride to school then they need experience with real traffic.</p>
+
+		<p>Our courses gently introduce the trainees to traffic in a progressive manner. By the end of the course they will be riding competently in light traffic communicating to drivers and making their own decisions.</p>
+
+		<table border="1" style="margin-top: 20px;">
+			<thead>
+				<th>Schools</th>
+				<th>Parents</th>
+				<th>Children</th>
+			</thead>
+			<tbody>
+				<tr>
+					<td>Bikeability Level 2 is available for year 5, 6 and 7. It is important that all your year 5, 6 and 7 children get the opportunity to learn this great life skill.</td>
+					<td>Bikeability is the ultimate safety training for your children.</td>
+					<td>Do you want to ride your bike? We can show you the best ways.</td>
+				</tr>
+				<tr>
+					<td>We will fit in with you as much as we can.</td>
+					<td>Every 10, 11, 12 year old child needs this, even if the don't have a bike we can provide them.</td>
+					<td>You will love our sessions, a time to show everyone how good you are.</td>
+				</tr>
+				<tr>
+					<td>We can help you increase take up. We can run assemblies, bike sessions. Why not fit cycling and sustainability into your lessons?</td>
+					<td>Even if they don't cycle, they will be learning valuable road safety lessons which will be useful when they start driving.</td>
+					<td></td>
+				</tr>
+			</tbody>
+		</table>
+
+		<h3>Reading Bikeability calendar</h3>
+
+		<div id="calendar">
+			<iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=5m70sffsi8445ulrc1qm0im2e0%40group.calendar.google.com&amp;color=%238D6F47&amp;ctz=Europe%2FLondon" style=" border-width:0 " width="800" height="600" frameborder="0" scrolling="no"></iframe>
+		</div>
 
 		<h2 id="contact">Contact</h2>
 		<p>If you're interested, or would like to work with us, we'd love to hear from you! You can contact us by email (<a href="mailto:greg@avanticycling.com">greg@avanticycling.com</a>) or phone (07508 028 457).</p>
