--- a/public/modules/core/views/bikeability.client.view.html
+++ b/public/modules/core/views/bikeability.client.view.html
@@ -1,11 +1,16 @@
 <section data-ng-controller="HomeController">
 	<div class="body-copy">
+		<div class="support-image">
+			<img src="/modules/core/img/bikeability.jpg" alt="" class="img-responsive" />
+		</div>
 		<h1>Bikeability</h1>
 		<p>Bikeability is the modern way of teaching your children to ride in traffic. We use modern interactive and realistic teaching methods with highly trained instructors.</p>
 
 		<p>If your children are to use their bikes safely to go to their friends or ride to school then they need experience with real traffic.</p>
 
 		<p>Our courses gently introduce the trainees to traffic in a progressive manner. By the end of the course they will be riding competently in light traffic communicating to drivers and making their own decisions.</p>
+
+		<p><a anchor-smooth-scroll="calendar" href="/#!/bikeability#calendar">View Bikeability calendar</a></p>
 
 		<table border="1">
 			<thead>
@@ -36,5 +41,10 @@
 				</tr>
 			</tbody>
 		</table>
+
+		<div class="calendar" id="calendar">
+			<h3>Reading Bikeability calendar</h3>
+			<iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=5m70sffsi8445ulrc1qm0im2e0%40group.calendar.google.com&amp;color=%238D6F47&amp;ctz=Europe%2FLondon&mp;output=embed" style=" border-width:0 " width="800" height="600" frameborder="0" scrolling="no"></iframe>
+		</div>
 	</div>
 </section>
