--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -21,20 +21,24 @@
 		</div> -->
 	</div>
 	<div class="body-copy">
+		<div class="support-image">
+			<img src="/modules/core/img/cycle-training.jpg" alt="" class="img-responsive" />
+		</div>
 		<h2 id="what-we-do">What we do</h2>
 		<ul>
-			<li>Deliver Bikeability;</li>
-			<li>Provide consultancy to Bikeability schemes;</li>
-			<li>Provide consultancy to companies who wish to improve their green credentials;</li>
-			<li>Train instructors and leaders;</li>
-			<li>Lead cycle tours;</li>
-			<li>Coach new riders.</li>
+			<li>Deliver <a anchor-smooth-scroll="bikeability" href="/#!/bikeability">Bikeability</a></li>
+			<li>Provide consultancy to Bikeability schemes</li>
+			<li>Provide consultancy to companies who wish to improve their green credentials</li>
+			<li>Train instructors and leaders</li>
+			<li>Lead cycle tours</li>
+			<li>Coach new riders</li>
 		</ul>
 		<p>We are a forward thinking company; we believe that cycling is hugely beneficial to all. It benefits people’s health and the environment. We at Avanti Cycling are about helping people and organisations.</p>
-		<h3>We help people</h3> 
+
+		<!-- <h3>We help people</h3> 
 		<p>We can help to get people on their bikes or simply understand what they can or cannot do whilst cycling. </p> 
 		<h3>We help organisations</h3> 
-		<p>We can assist organisations in encouraging their employees to cycle to work. We can train those people to ride in traffic and enjoy their commute, or simply to maintain their own bikes.</p>
+		<p>We can assist organisations in encouraging their employees to cycle to work. We can train those people to ride in traffic and enjoy their commute, or simply to maintain their own bikes.</p> -->
 
 		<h2 id="who-are-we">Who are we?</h2>
 		<p>Avanti Cycling was founded by Greg Woodford. Greg has been working for the CTC for over ten years managing their cycle training department. During which time he:</p>
@@ -51,7 +55,7 @@
 		<!-- <h3>About Greg Woodford</h3> 
 		<p>Director and founder, Greg Woodford, is a passionate cyclist, loving all types of riding, be it commuting through London, touring or competing. He is an accomplished time trialist regularly winning national championships. He is probably the most experienced and knowledgeable person in the UK in cycle-training, having been involved in the National Standards/Bikeability since its inception.</p> -->
 
-		<h2 id="bikeability">Bikeability</h2>
+		<!-- <h2 id="bikeability">Bikeability</h2>
 		<p>Bikeability is the modern way of teaching your children to ride in traffic. We use modern interactive and realistic teaching methods with highly trained instructors.</p>
 
 		<p>If your children are to use their bikes safely to go to their friends or ride to school then they need experience with real traffic.</p>
@@ -81,15 +85,56 @@
 					<td></td>
 				</tr>
 			</tbody>
-		</table>
+		</table> -->
 
-		<h3>Reading Bikeability calendar</h3>
-
-		<div id="calendar">
-			<iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=5m70sffsi8445ulrc1qm0im2e0%40group.calendar.google.com&amp;color=%238D6F47&amp;ctz=Europe%2FLondon" style=" border-width:0 " width="800" height="600" frameborder="0" scrolling="no"></iframe>
+		<!-- <div class="row">
+			<p>
+				<a class="btn btn-primary btn-lg" href="#" target="_blank" onclick="return $('.calendar').toggle();">View calendar</a>
+			</p>
 		</div>
 
-		<h2 id="contact">Contact</h2>
-		<p>If you're interested, or would like to work with us, we'd love to hear from you! You can contact us by email (<a href="mailto:greg@avanticycling.com">greg@avanticycling.com</a>) or phone (07508 028 457).</p>
+		<div class="calendar" style="display:none;">
+			<h3>Reading Bikeability calendar</h3>
+			<iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=5m70sffsi8445ulrc1qm0im2e0%40group.calendar.google.com&amp;color=%238D6F47&amp;ctz=Europe%2FLondon&mp;output=embed" style=" border-width:0 " width="800" height="600" frameborder="0" scrolling="no"></iframe>
+		</div> -->
+
+		<!-- <h2 id="environment">Environment</h2>
+		<p>REDUCE-REUSE-RECYCLE</p>
+		<p>Avanti Cycling tries to abide by the above mantra. This means that:</p>
+
+		<ol>
+			<li>We try and reduce paperwork where possible. As business as possible will be conducted electronically</li>
+			<li>We will reuse paper and envelopes where possible. This might look a little unprofessional but it fits into our environmental ethos</li>
+			<li>Bikes will be re used where possible. This increases out maintenance bill but fits entirely within our REUSE policy</li>
+		</ol>
+
+		<p>All trips, where possible will be made by train and bike.</p>
+		<p>Benefits:</p>
+		<ol>
+			<li><b>Environmental</b>. This is an entirely environmental policy</li>
+			<li><b>Cost</b>. It may benefit Avanti Cycling in terms of cost</li>
+			<li><b>Example</b>. We hope to provide a good environmental example to others.</li>
+		</ol> -->
+
+
+		<!-- <h2 id="instructor">Instructor training</h2>
+		<p>Avanti Cycling is affiliated to the CTC the national cycling charity. We can deliver the full suite of courses that CTC delivers.</p>
+
+		<h3>National Standard Instructor Training</h3>
+		<p>Greg Woodford was working within the National Standards ambit from the beginning. He was part of the working group that created the standards.</p>
+
+		<h3>Ride Leading training</h3>
+		<p>As one of the leading experts in ride leading (on road) in the UK, Greg Woodford has created a variety of on road ride leading courses and delivered them throughout the UK. Avanti Cycling has also worked in partnership with national organisations to develop courses that fit their needs.</p>
+
+		<h3>Courses that can be delivered</h3>
+		<ol class="lettered">
+			<li>Club leader course. A one day course aimed at cycling / triathlon clubs to develop best practise in leading club runs.</li>
+			<li>Ride manager course, aimed at the customer who wishes to lead leisure rises. This suit of courses can last form one day to three dependant on the outcomes you wish to achieve.</li>
+			<li>Be spoke ride leader course. Avanti Cycling has experience in creating courses to fit in with your outcomes, come and talk to us.</li>
+			<li>You don't want a full course? We can come and talk ot you organisation about best practise in ride leading. These presentations are designed to encourage new leaders to come through. As Avanti cycling is affiliated to the national cycling charity we have the recognition benefits that this brings.</li>
+		</ol> -->
+
+		<!-- <h2 id="contact">Contact</h2>
+		<p>If you're interested, or would like to work with us, we'd love to hear from you. You can contact us by email (<a href="mailto:greg@avanticycling.com">greg@avanticycling.com</a>) or phone us on <a href="tel:07508028457">07508 028 457</a>.</p> -->
 	</div>
 </section>
