--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -16,20 +16,26 @@
 	</div>
 	<nav class="collapse navbar-collapse" collapse="!isCollapsed" role="navigation">
 		<ul class="nav navbar-nav navbar-left">
-			<li ui-route="#what-we-do">
+			<!-- <li ui-route="#what-we-do">
 				<a anchor-smooth-scroll="what-we-do" href="/#!/#what-we-do">What we do</a>
 			</li>
 			<li ui-route="#who-we-are">
 				<a anchor-smooth-scroll="who-are-we" href="/#!/#who-we-are">Who we are</a>
-			</li>
-			<li ui-route="#bikeability">
-				<a anchor-smooth-scroll="bikeability" href="/#!/#bikeability">Bikeability</a>
-			</li>
-			<!-- <li>
-				<a href="/#!/bikeability">Bikeability</a>
 			</li> -->
+			<!-- <li ui-route="#bikeability">
+				<a anchor-smooth-scroll="bikeability" href="/#!/#bikeability">Bikeability</a>
+			</li> -->
+			<li>
+				<a href="/#!/bikeability">Bikeability</a>
+			</li>
+			<li>
+				<a href="/#!/instructortraining">Instructor training</a>
+			</li>
+			<li>
+				<a href="/#!/environment">Environment</a>
+			</li>
 			<li ui-route="#contact">
-				<a anchor-smooth-scroll="contact" href="/#!/#contact">Contact</a>
+				<a anchor-smooth-scroll="contact" href="/#!/contact">Contact</a>
 			</li>
 		</ul>
 	</nav>
