Changed home link so it doesn't redirect.

--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -12,7 +12,7 @@
 		<!-- <a href="/#!/">
 			<img alt="Avanti cycling" class="img-responsive text-center" src="/modules/core/img/logo.svg" onerror="this.onerror=null; this.src='/modules/core/img/logo.png'" />
 		</a> -->
-		<a href="/"><img alt="Avanti cycling" class="img-responsive text-center" src="/modules/core/img/logo.png" /></a>
+		<a href="/#!/"><img alt="Avanti cycling" class="img-responsive text-center" src="/modules/core/img/logo.png" /></a>
 	</div>
 	<nav class="collapse navbar-collapse" collapse="!isCollapsed" role="navigation">
 		<ul class="nav navbar-nav navbar-left">
