Making the header slightly transparent. Need to work out compilation of CSS files.;2D

--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -33,7 +33,7 @@
 			<section class="footer">
 				<div class="jumbotron">
 					<div class="row">
-						Registered in England no...
+						Registered in England.
 					</div>
 				</div>
 			</section>
