--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -13,9 +13,10 @@
 			<img alt="Avanti cycling" class="img-responsive text-center" src="/modules/core/img/logo.svg" onerror="this.onerror=null; this.src='/modules/core/img/logo.png'" />
 		</a> -->
 		<a href="/#!/"><img alt="Avanti cycling" class="img-responsive text-center" src="/modules/core/img/logo.png" /></a>
+		<div class="strapline">Cycling is the way forward</div>
 	</div>
 	<nav class="collapse navbar-collapse" collapse="!isCollapsed" role="navigation">
-		<ul class="nav navbar-nav navbar-left">
+		<ul class="nav navbar-nav navbar-right">
 			<!-- <li ui-route="#what-we-do">
 				<a anchor-smooth-scroll="what-we-do" href="/#!/#what-we-do">What we do</a>
 			</li>
@@ -32,10 +33,10 @@
 				<a href="/#!/instructortraining">Instructor training</a>
 			</li>
 			<li>
-				<a href="/#!/environment">Environment</a>
+				<a href="/#!/consultancy">Consultancy</a>
 			</li>
 			<li ui-route="#contact">
-				<a anchor-smooth-scroll="contact" href="/#!/contact">Contact</a>
+				<a href="/#!/contact">Contact</a>
 			</li>
 		</ul>
 	</nav>
