--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -28,8 +28,8 @@
 		<ul>
 			<li>Deliver <a anchor-smooth-scroll="bikeability" href="/#!/bikeability">Bikeability</a></li>
 			<li>Provide consultancy to Bikeability schemes</li>
-			<li>Provide consultancy to companies who wish to improve their green credentials</li>
-			<li>Train instructors and leaders</li>
+			<li>Provide <a href="/#!/consultancy">consultancy</a> to companies who wish to improve their green credentials</li>
+			<li><a href="/#!/instructortraining">Train instructors</a> and leaders</li>
 			<li>Lead cycle tours</li>
 			<li>Coach new riders</li>
 		</ul>
@@ -51,6 +51,8 @@
 			<li>Managed the first Instructor Training Assessment process;</li>
 			<li>Developed CTC into an Instructor training Organisation writing their courses and training their Instructor Trainers.</li>
 		</ul>
+
+		<p>Avanti Cycling works hard to help the environment. We follow the mantra: Reduce-Reuse-Recycle. This means that you might receive letters in used envelopes! Check out our <a href="/#!/environment">environmental policy</a>.</p>
 
 		<!-- <h3>About Greg Woodford</h3> 
 		<p>Director and founder, Greg Woodford, is a passionate cyclist, loving all types of riding, be it commuting through London, touring or competing. He is an accomplished time trialist regularly winning national championships. He is probably the most experienced and knowledgeable person in the UK in cycle-training, having been involved in the National Standards/Bikeability since its inception.</p> -->
