--- a/public/modules/core/views/instructortraining.client.view.html
+++ b/public/modules/core/views/instructortraining.client.view.html
@@ -14,7 +14,7 @@
 			<li>Club leader course. A one day course aimed at cycling / triathlon clubs to develop best practise in leading club runs.</li>
 			<li>Ride manager course, aimed at the customer who wishes to lead leisure rises. This suit of courses can last form one day to three dependant on the outcomes you wish to achieve.</li>
 			<li>Be spoke ride leader course. Avanti Cycling has experience in creating courses to fit in with your outcomes, come and talk to us.</li>
-			<li>You don't want a full course? We can come and talk ot you organisation about best practise in ride leading. These presentations are designed to encourage new leaders to come through. As Avanti cycling is affiliated to the national cycling charity we have the recognition benefits that this brings.</li>
+			<li>You don't want a full course? We can come and talk to your organisation about best practise in ride leading. These presentations are designed to encourage new leaders to come through. As Avanti cycling is affiliated to the national cycling charity, we have the recognition benefits that this brings.</li>
 		</ol>
 	</div>
 </section>
