--- a/public/modules/core/views/environment.client.view.html
+++ b/public/modules/core/views/environment.client.view.html
@@ -1,5 +1,8 @@
 <section data-ng-controller="HomeController">
 	<div class="body-copy">
+		<div class="support-image">
+			<img src="/modules/core/img/recyclesymbol.png" alt="" class="img-responsive" />
+		</div>
 		<h1 id="environment">Environment</h1>
 		<p>REDUCE-REUSE-RECYCLE</p>
 		<p>Avanti Cycling tries to abide by the above mantra. This means that:</p>
