--- a/public/modules/core/views/environment.client.view.html
+++ b/public/modules/core/views/environment.client.view.html
@@ -1,6 +1,6 @@
 <section data-ng-controller="HomeController">
 	<div class="body-copy">
-		<div class="support-image">
+		<div class="support-image recycling-symbol">
 			<img src="/modules/core/img/recyclesymbol.png" alt="" class="img-responsive" />
 		</div>
 		<h1 id="environment">Environment</h1>
