Footer position bodged.

--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -30,8 +30,8 @@
 		<section class="container">
 			{% block content %}{% endblock %}
 
-			<section class="footer">
-				<div class="jumbotron">
+			<section class="footer-container">
+				<div class="footer">
 					<div class="row">
 						Registered in England.
 					</div>
